assets/css/_custom.css
body {
  margin: 0;
  padding-bottom: 178.53px;
  font-family: var(--sans-serif);
  color: #333;
  outline: none !important;
}

textarea {
  resize: none;
}

.alert-banner {
  margin: 0;
  padding: 1.25em 2em;
}

.cta {
  float: right;
  margin-top: 1.125em;
}

.pointer {
  cursor: pointer;
}

.t3 {
  transition-duration: 0.3s;
}

.all {
  transition-property: all;
}

.ease {
  transition-timing-function: ease;
}

.invert {
  filter: invert(100%);
}

.pa3-5 {
  padding: 1.5rem;
}

.lh-sub-title {
  line-height: 1.4;
}

.logout-form p,
form {
  display: inline;
}

.background-img {
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 80%;
  height: 7em;
}

.icon-behaviour {
  background-image: url(/images/icon-behaviour.png);
}

.icon-development {
  background-image: url(/images/icon-development.png);
}

.icon-eating {
  background-image: url(/images/icon-eating.png);
}

.icon-feelings {
  background-image: url(/images/icon-feelings.png);
}

.icon-finances {
  background-image: url(/images/icon-finances.png);
}

.icon-sleep {
  background-image: url(/images/icon-sleep.png);
}

.icon-toilet {
  background-image: url(/images/icon-toilet.png);
}

.icon-work {
  background-image: url(/images/icon-work.png);
}

.h-min-100vh {
  min-height: 100vh;
}

.max-form-width {
  max-width: 1000px;
}

